tests/neg/i18533/non-SCALA_ONLY.java
package i18533;

// Special test for the non-sealed trick (See JavaParsers.scala::modifiers)
public non class Test { // error

}